--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css" />
-    <link href ="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet">
+    <link href ="https://fonts.googleapis.com/css?family=Bangers:400" rel="stylesheet">
     <title>React App</title>
   </head>
  
